added quorum collection

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
